# suffugium

./: .gitignore  Notes.txt  README.md  activate_env.txt  config.yaml  pyproject.toml  requirements.txt  run_suffugium.sh
make_thermal_db/: brumation.ipynb  get_env_data.ipynb
src/suffugium/: behavior.py  config_schema.py  data_logger.py  landscape.py  metabolism.py  model.py  organism.py  patch.py  run_model.py  summarise_sim.py
tests/: test_behavior.py  test_metabolism.py  test_organism.py
